--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/*/
 !node_modules/bpmn-moddle/
 !node_modules/moddle/
 !node_modules/moddle-xml/
+node_modules/bpmn-js/dist/*
+#!node_modules/bpmn-js/dist/assets/
 public/app.bundled.js
 public/app.bundled.js.map
 public/vendor/
