--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ node_modules/bpmn-js/dist/*
 #!node_modules/bpmn-js/dist/assets/
 public/app.bundled.js
 public/app.bundled.js.map
-public/vendor/
+#public/vendor/
 tmp/
